Fixed gap on mobile

--- a/TangerineUI-cherry.css
+++ b/TangerineUI-cherry.css
@@ -353,8 +353,13 @@ body.app-body  {
     gap: 10px;
 }
 @media screen and (min-width:1175px) {
-    .columns-area__panels__main {
+    .app-body .columns-area__panels__main {
         max-width: 580px;
+    }
+}
+@media screen and (max-width:1174px) {
+    .app-body .columns-area__panels {
+        gap: 0;
     }
 }
 
